--- a/scss/form.scss
+++ b/scss/form.scss
@@ -1,6 +1,7 @@
 .contact-form-wrap {
     padding: 60px 0;
     position: relative;
+    min-height: 620px;
 
     .contact-form-wrap--title {
         text-align: center;
