--- a/scss/animations.scss
+++ b/scss/animations.scss
@@ -13,6 +13,17 @@
     transform: translate3d(0, 0, 0);
 }
 
+.animation-element.slide-right {
+    opacity: 0;
+    transform: translate3d(100px, 0, 0);
+    transition: 0.5s linear;
+}
+
+.animation-element.slide-right.in-view {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+}
+
 .animation-element.bounce-up {
     opacity: 1;
     transform: translate3d(0, 200px, 0);
