--- a/scss/history.scss
+++ b/scss/history.scss
@@ -22,6 +22,10 @@
                 position: relative;
                 top: 0;
                 left: -25px;
+                font-size: 21px;
+                color: #fff;
+                line-height: 53px;
+                text-align: center;
             }
     
             .title-wrap--text {
