--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,6 +15,7 @@ Tags: portfolio
 @import 'fontawesome.min';
 @import 'jquery-ui';
 @import 'ui-widgets';
+@import 'owl.carousel.min';
 
 // Main section
 @import 'header';
@@ -31,6 +32,10 @@ Tags: portfolio
 .container-fluid {
     max-width: 1140px;
     margin: 0 auto;
+}
+
+body {
+    overflow-x: hidden;
 }
 
 .clear:after {
