--- a/scss/form.scss
+++ b/scss/form.scss
@@ -2,6 +2,8 @@
     padding: 60px 0;
     position: relative;
     min-height: 620px;
+    background: url("img/bg.jpg") no-repeat center center;
+    background-size: cover;
 
     .contact-form-wrap--title {
         text-align: center;
